# agent-fleet

./: .agent-fleet-state.json  .agent-fleet.yaml  .gitignore  CHANGELOG.md  CONTEXT.md  README.md  efficiency-trail.tsv  fleet.example.yaml  pyproject.toml
.github/workflows/: ci.yml
agent_fleet/: __init__.py  _schema.py  admission.py  agent_mode.py  backends.py  bridge_daemon.py  cli.py  cli_core.py  cli_env.py  complexity.py  config.py  context.py  cursor_backend.py  dispatcher.py  dispatcher_task.py  disposition.py  doctor.py  emit.py  fix_attempt.py  fleet_paths.py  fleet_scope.py  fleet_session.py  grok_backend.py  handoff_context.py  hooks.py  implementer.py  in_flight.py  kimi_backend.py  logging_config.py  memory.py  noop_session.py  openrouter_backend.py  persona_foundry.py  persona_router.py  personas.py  phase_graph.py  phases.py  planner.py  policy.py  redispatch.py  (+19 more)
agent_fleet/autonomy/: __init__.py  decide.py  parse_review.py  types.py
agent_fleet/base-kit/: manifest.yaml
agent_fleet/capacity/: __init__.py  config.py  gate.py  visual_audit.py
agent_fleet/code_review/: __init__.py  config.py  fix.py  loop.py  publish.py
agent_fleet/contracts/: __init__.py  design_review.py  handoff.py  implementation_brief.py  improvement_proposal.py  mcp.py  mcp_requirement.py  repo_context.py  research_note.py  review.py  task_spec.py  tech_lead_review.py  verify_result.py
agent_fleet/integrations/: __init__.py  command_verifier.py  github_cli.py  github_forge.py  local_git.py  noop_forge.py
agent_fleet/issue_loop/: __init__.py  admission.py  backlog_dispatcher.py  cli.py  config.py  dispatch.py  github_ops.py  queue.py  state.py  triggers.py  watcher.py
agent_fleet/learning/: __init__.py  experience.py  llm_synthesis.py  synthesizer.py
agent_fleet/level_up/: __init__.py  compaction.py  config.py  experience.py  gate.py  journal.py  models.py  overlay.py  paths.py  record.py  train.py
agent_fleet/observability/: __init__.py  context.py  efficiency.py  events.py  fleet_logger.py  log.py  logfire_sink.py  run_metrics.py  run_store.py  sinks.py
agent_fleet/orchestration/: __init__.py  config.py  convergence.py  decompose.py  equip.py  journal.py  primitives.py  resume.py  types.py
agent_fleet/personas/: backend.md  coder.loadout.yaml  coder.md  explorer.loadout.yaml  explorer.md  fleet-learner.loadout.yaml  fleet-learner.md  pr-analyzer.loadout.yaml  pr-analyzer.md  (+7 more)
agents/: pr_review_overlay.md
docs/: AGENT-FLEET-DEV.md  DISPATCH-COOKBOOK.md  FLEET-CONFIG.md  GROK.md  KIMI.md  MCP.md  NEW-REPO.md  OBSERVABILITY.md  OPENROUTER.md  PERSONA-EVOLUTION.md  PERSONAS.md  QUICKSTART.md  REDISPATCH.md  RELEASE.md  SCHEDULES.md  SCOUTS.md  SESSIONS.md  WORKSTREAMS.md  v0.10.0-run3-spec.md  v0.10.0-spec.md  v0.10.1-decision-trail.tsv  v0.10.1-spec.md  v0.11.0-baseline.txt  v0.11.0-decision-trail.tsv  v0.11.0-design.md  v0.9.0-decision-trail.tsv  v0.9.0-stretch-report.md
examples/: agent-fleet-controller.yaml  agent-fleet-pr-loop.service  agent-fleet-queue.yaml  agent-fleet-schedule-controller.yaml  agent-fleet-schedule-watch.service  agent-fleet-watch.service  fleet-skills-buildout.yaml  fleet.grok.yaml  fleet.kimi.yaml  fleet.openrouter.yaml  monorepo.agent-fleet.yaml  repo-full.agent-fleet.yaml  repo.agent-fleet.yaml  silphco.agent-fleet.yaml
integrations/: command_verifier.py  local_git.py  noop_forge.py
scripts/: check-import-shadow.py  cut_release.sh  deploy-hermes.sh  efficiency_report.py  outcome_scorecard.py  pr_analyzer_github.py  pr_loop_watcher.py  sync-base-kit.sh  v0_11_0_verify.py  verify_learning_flywheel.py  worktree-bootstrap.sh
targets/: silphcoanalytics.agent-fleet.yaml  silphcoanalytics.queue.yaml
targets/silphcoanalytics/: SETUP.md  agent-fleet-watch.service  benchmarks.json  pr_review_overlay.md  pyproject.toml
targets/silphcoanalytics/agents/: _canonical.py  constants.py  dispatch.py  fleet_status.py  github.py  kimi.py  logging.py  runs.py  test_verify.py  test_verify_checks.py  verify.py  verify_checks.py
targets/silphcoanalytics/personas/: _design_rubric.md  backend.md  data.md  frontend.md  pokemon_analyst.md  security_qa.md
targets/silphcoanalytics/silphco/: playwright_capture.py  vision_executor.py  visual.py
targets/silphcoanalytics/silphco/selfimprove/: __init__.py  __main__.py  gate.py  guard.py  loop.py  mine.py  propose.py
targets/silphcoanalytics/silphco/selfimprove/evals/: README.md  promptfooconfig.yaml
targets/silphcoanalytics/silphco/tests/: _mock_llm.py
targets/silphcoanalytics/tests/: test_canonical.py  test_commit_hook_retry.py  test_github.py  test_kimi_smoke.py  test_selfimprove_gate.py  test_selfimprove_guard.py  test_selfimprove_loop.py  test_selfimprove_mine.py  test_selfimprove_propose.py  test_verify_checks.py
tests/: conftest.py  test_allowed_paths_enforcement.py  test_autonomy_decide.py  test_autonomy_parse_review.py  test_backend_registry.py  test_backlog_dispatcher.py  test_bridge_session_start.py  test_bridge_teardown.py  test_capacity.py  test_capacity_fanout.py  test_cli_core.py  test_cli_for_agents_equip.py  test_cli_observability.py  test_code_review.py  test_code_review_config.py  test_code_review_fix_equip.py  test_code_review_gate.py  test_command_verifier_baseline_attribution.py  test_command_verifier_bootstrap_event.py  test_command_verifier_failure_propagation.py  test_complexity.py  test_config_mcp.py  test_configurable_tiers_skills.py  test_convergence.py  test_cursor_session.py  test_dag.py  test_dag_cli_resume.py  test_dag_parallel.py  test_dispatch_env_guard.py  test_dispatch_primitives.py  test_dispatcher_except_unbound.py  test_dispatcher_loadout_size.py  test_dispatcher_redispatch.py  test_dispatcher_sessions.py  test_disposition.py  test_disposition_runner_wiring.py  test_doctor.py  test_emit.py  test_equip.py  test_event_schema_guard.py  (+91 more)
(+133 files in other folders)
