[project]
name = "agent-fleet"
version = "0.3.9"
description = "Multi-agent coding fleet — scoped personas, review pipelines, pluggable execution backends"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["agents", "cursor", "composer", "coding-agent", "fleet"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "cursor-sdk>=0.1.0",
    "jsonschema>=4.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "ty>=0.0.20"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4", "ty>=0.0.20"]

[project.scripts]
agent-fleet = "agent_fleet.cli:main"
agent-fleet-pr-analyzer = "agent_fleet.pr_review.github_action:main"
agent-fleet-pr-loop = "agent_fleet.pr_loop.cli:main"
agent-fleet-watch = "agent_fleet.issue_loop.cli:main"
agent-fleet-issue-dispatch = "agent_fleet.issue_loop.dispatch:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_fleet*"]

[tool.setuptools.package-data]
agent_fleet = ["personas/*.md", "schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
    "ANN",
    "ARG",
    "PTH",
    "RET",
    "C4",
    "PIE",
    "TC",
    "ISC",
    "LOG",
]

[tool.ty]
[tool.ty.terminal]
error-on-warning = true
