[project]
name = "agent-fleet"
version = "0.12.1"
description = "Multi-agent coding fleet — scoped personas, review pipelines, pluggable execution backends"
readme = "README.md"
requires-python = ">=3.14,<3.15"
keywords = ["agents", "cursor", "composer", "coding-agent", "fleet"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
]
dependencies = [
    "croniter>=2.0",
    "cursor-sdk>=0.1.0",
    "jsonschema>=4.0",
    "logfire>=3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "ty>=0.0.20"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4", "ty>=0.0.20"]

[project.scripts]
fleet = "agent_fleet.cli:main"
agent-fleet = "agent_fleet.cli:main"
agent-fleet-pr-analyzer = "agent_fleet.pr_review.github_action:main"
agent-fleet-pr-loop = "agent_fleet.pr_loop._shim:main"
agent-fleet-watch = "agent_fleet.issue_loop.cli:main"
agent-fleet-issue-dispatch = "agent_fleet.issue_loop.dispatch:main"
agent-fleet-schedule = "agent_fleet.schedule.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_fleet*"]

[tool.setuptools.package-data]
agent_fleet = [
    "personas/*.md",
    "personas/*.loadout.yaml",
    "personas/*/loadout.md",
    "personas/*/reference/*.md",
    "base-kit/**/*",
    "schemas/*.json",
    "orchestration/dag/data/*.tsx",
    "templates/*.yaml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.logfire]
ignore_no_config = true

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
    "ANN",
    "ARG",
    "PTH",
    "RET",
    "C4",
    "PIE",
    "TC",
    "ISC",
    "LOG",
]

[tool.ty]
[tool.ty.terminal]
error-on-warning = true
