[project]
name = "silphco-agents"
version = "0.1.0"
requires-python = ">=3.14,<3.15"
dependencies = [
    "jsonschema>=4.20",
    "agent-fleet @ git+https://github.com/Evan-Kim2028/agent-fleet.git@main",
]

[project.optional-dependencies]
design-review = ["playwright>=1.40"]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[project.scripts]
agent-runs   = "agents.runs:main"
fleet-status = "agents.fleet_status:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["agents", "silphco"]

[tool.pyright]

[tool.pytest.ini_options]
testpaths = ["tests", "agents/agents", "silphco/tests"]
markers = ["slow: requires real external API calls (KIMI_API_KEY must be set)"]

[tool.ruff.lint.per-file-ignores]
"agents/verify.py" = ["E402"]
